--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: base
 channels:
   - conda-forge
 dependencies:
+# r packages
   - r-tidyverse=2.0.0
   - r-repr=1.1.7
   - r-broom=1.0.7
@@ -12,5 +13,9 @@ dependencies:
   - r-corrplot=0.95
   - r-car=3.1-3
   - r-caret=7.0-1
-  - pROC=1.18.5
-  - randomForest=4.7-1.2
+  - r-pROC=1.18.5
+  - r-randomForest=4.7-1.2
+  
+# python packages
+  - docopt=0.7.1
+  - quarto=1.6.42
